# FoxyDriver

./: Foxy-Terminal.bat  README.md  pyproject.toml
foxyterminal/: Foxy-Terminal.bat
foxyterminal/src/: download.py  tcp.py  terminal.py  upload.py
