[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FoxyDriver"
version = "2024.2.0"

requires-python = ">=3.8"
authors = [
  {name = "AlexM954"},
]
maintainers = [
  {name = "AlexM954"}
]
description = "Python toolkit for controlling Foxy fraction collectors."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["Python", "Foxy", "Teledyne", "fraction collectors", "remote control", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Intended Audience :: Science/Research",
  "Development Status :: 4 - Beta"
]

[project.urls]
Repository = "https://github.com/AlexM954/FoxyDriver.git"
Issues = "https://github.com/AlexM954/FoxyDriver/issues"
